# CAPTURinoPlugin

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  posix_main.c  version.h  version.h.in  win_main.c
.github/workflows/: build.yml  build_ubuntu.yml  build_win64.yml  cmake-multi-platform.yml  create-package-release.yml  create_release.yml  merge_tests.yml  release.yml  test.yml
Posix/: CMakeLists.txt  _systemutils.h  posix_console.c  posix_internal_filehandling.c  posix_internal_filehandling.h  posix_pipehandling.c  posix_serialhandling.c  posix_systemutils.c
Posix/diag/: CMakeLists.txt  posix_diagnosis.c
Win/: CMakeLists.txt  _systemutils.h  win_console.c  win_pipehandling.c  win_serialhandling.c  win_systemutils.c
Win/diag/: CMakeLists.txt  win_diagnosis.c
compat/: console.h  diagnosis.h  pipehandling.h  serialhandling.h  systemutils.h
dissectors/: Uart148Dissector.lua  init.lua
docsrcs/: DocModuleDefinitions.dox
generic/: CMakeLists.txt  capturinocommonintfcfuncs.c  capturinocommonintfcfuncs.h  capturinoconn.c  capturinoconn.h  capturinointfc.c  capturinointfc.h  capturinotestintfc.c  capturinotestintfc.h  extcapmngr.c  extcapmngr.h  generic_main.c  generic_main.h  pcap_147_capturinodebug.c  pcap_147_capturinodebug.h  pcap_writer.c  pcap_writer.h
generic/capturelib/: CMakeLists.txt  capturino2pcapadptr.c  capturino2pcapadptr.h
lib/: CMakeLists.txt  argparser.c  argparser.h  genericutils.h  linkedlist.c  linkedlist.h  ringbuf.c  ringbuf.h
test/: CMakeLists.txt  releasetests.ctest  tests.ctest
